# minimal-csv-diff

./: .gitignore  README.md  csv_diff__v0_3.py  diff.csv  main.py  pyproject.toml  setup.py
.github/workflows/: CI.yml  release.yml
demo/: bug_legacy.csv  bug_new.csv  demo.md  diff.csv  file1.csv  file2.csv
src/: csv_diff.py
src/minimal_csv_diff/: api.py  cli.py  csv_processor.py  diff_engine.py  eda_analyzer.py  main.py
tests/: test_diff.py  test_eda.py
